--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,35 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #000028;
+  --accent-color: #ff0070;
+  --text-color: #000028;
+  --bg-image: url("../images/cover-image-dark.png");
+
+  --title-color: #db00ff;
+  --title-accent-color: var(--accent-color);
+
+  --header-display-rec: block;
+  --header-button-color: var(--accent-color);
+
+  --content__title-color: var(--accent-color);
+  --content__text-color: #f1b2ce;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    --bg-color: #000028;
+    --accent-color: #ff0070;
+    --text-color: #000028;
+    --bg-image: url("../images/cover-image-dark.png");
+
+    --title-color: #db00ff;
+    --title-accent-color: var(--accent-color);
+
+    --header-display-rec: block;
+    --header-button-color: var(--accent-color);
+
+    --content__title-color: var(--accent-color);
+    --content__text-color: #f1b2ce;
+  }
 }
