--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,35 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #fff1f7;
+  --accent-color: #ff8dcb;
+  --text-color: #353430;
+  --bg-image: url("../images/cover-image-light.png");
+
+  --title-color: #ffc2e6;
+  --title-accent-color: #ff0070;
+
+  --header-display-rec: none;
+  --header-button-color: var(--text-color);
+
+  --content__title-color: var(--text-color);
+  --content__text-color: var(--text-color);
+}
+
+@media (prefers-color-scheme: light) {
+  body {
+    --bg-color: #fff1f7;
+    --accent-color: #ff8dcb;
+    --text-color: #353430;
+    --bg-image: url("../images/cover-image-light.png");
+
+    --title-color: #ffc2e6;
+    --title-accent-color: #ff0070;
+
+    --header-display-rec: none;
+    --header-button-color: var(--text-color);
+
+    --content__title-color: var(--text-color);
+    --content__text-color: var(--text-color);
+  }
 }
