--- a/styles/light.css
+++ b/styles/light.css
@@ -14,6 +14,8 @@
   --text-color: #353430;
   --bg-image: url("../images/cover-image-light.png");
 
+  --corners-color: var(--text-color);
+
   --title-color: #ffc2e6;
   --title-accent-color: #ff0070;
 
@@ -25,11 +27,13 @@
 }
 
 @media (prefers-color-scheme: light) {
-  body {
+  :root {
     --bg-color: #fff1f7;
     --accent-color: #ff8dcb;
     --text-color: #353430;
     --bg-image: url("../images/cover-image-light.png");
+
+    --corners-color: var(--text-color);
 
     --title-color: #ffc2e6;
     --title-accent-color: #ff0070;
