--- a/styles/style.css
+++ b/styles/style.css
@@ -12,53 +12,14 @@
   background-position: center;
 }
 
-.title-decor {
-  color: var(--text-color);
-  background-color: var(--accent-color);
-  font-weight: bold;
-  line-height: 130%;
-  font-size: var(--font-size-m);
-}
-
-.title-decor-normal {
-  font-weight: normal;
-}
-
 .header {
-  background-image: var(--bg-image);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: repeat(3, 1fr);
 
-  min-height: 668px;
+  height: 100vh;
   position: relative;
   padding: 10px;
-}
-
-.header::after {
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);
-  position: absolute;
-  inset-inline-end: 10px;
-  inset-block-start: 10px;
-}
-
-.header::before {
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-inline-start: 1px solid var(--accent-color);
-  border-block-end: 1px solid var(--accent-color);
-  position: absolute;
-  inset-block-end: 10px;
-  inset-inline-start: 10px;
 }
 
 .header__rec {
@@ -83,6 +44,28 @@
   inset-inline-end: -21px;
 }
 
+.decorated-zone::after {
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-block-start: 1px solid var(--corners-color);
+  border-inline-end: 1px solid var(--corners-color);
+  position: absolute;
+  inset-inline-end: 10px;
+  inset-block-start: 10px;
+}
+
+.decorated-zone::before {
+  content: "";
+  width: 25px;
+  height: 25px;
+  border-inline-start: 1px solid var(--corners-color);
+  border-block-end: 1px solid var(--corners-color);
+  position: absolute;
+  inset-block-end: 10px;
+  inset-inline-start: 10px;
+}
+
 .header__theme-menu {
   align-self: center;
   justify-self: end;
@@ -92,19 +75,6 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-}
-
-.header__content {
-  align-self: center;
-}
-
-.header__title {
-  /* Для мобильных */
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  font-style: normal;
-  line-height: 82.5%;
-  color: var(--title-color);
-  text-shadow: 4px 4px 0px var(--accent-color);
 }
 
 .header__theme-menu-button {
@@ -136,6 +106,36 @@
   pointer-events: none;
 }
 
+.header__content {
+  align-self: center;
+}
+
+.header__title {
+  /* Для мобильных */
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-style: normal;
+  line-height: 82.5%;
+  color: var(--title-color);
+  text-shadow: 4px 4px 0px var(--accent-color);
+}
+
+.title-decor {
+  color: var(--text-color);
+  background-color: var(--accent-color);
+  font-weight: bold;
+  line-height: 130%;
+  font-size: var(--font-size-m);
+}
+
+.title-decor-normal {
+  font-weight: normal;
+}
+
+.header__paragraph {
+  position: relative;
+  inset-block-end: 5px;
+}
+
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> HEADER MEDIA >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 @media (375px < width) {
   .header {
@@ -154,12 +154,12 @@
     inset-block-start: var(--medium-ten-to-twenty-pixels-shift);
   }
 
-  .header::after {
+  .decorated-zone::after {
     inset-inline-end: var(--medium-ten-to-twenty-pixels-shift);
     inset-block-start: var(--medium-ten-to-twenty-pixels-shift);
   }
 
-  .header::before {
+  .decorated-zone::before {
     inset-block-end: var(--medium-ten-to-twenty-pixels-shift);
     inset-inline-start: var(--medium-ten-to-twenty-pixels-shift);
   }
@@ -181,13 +181,6 @@
 }
 
 @media (375px < width <= 768px) {
-  .header {
-    /* Чтобы высота хедера плавно увеличивалась по мере увеличения ширины экрана.
-    Динамическую высоту считал на сайте по логике с размером шрифта
-    https://clamp.font-size.app/?config=eyJyb290IjoiMTYiLCJtaW5XaWR0aCI6IjM3NXB4IiwibWF4V2lkdGgiOiI3NjhweCIsIm1pbkZvbnRTaXplIjoiNjY4cHgiLCJtYXhGb250U2l6ZSI6IjEwMjRweCJ9 */
-    height: clamp(668px, 20.5191rem + 90.5852vw, 1024px);
-  }
-
   .header__theme-menu {
     position: relative;
     /* Плавно сдвигаем меню на 55px вниз для соответствия макету  */
@@ -201,13 +194,6 @@
 }
 
 @media (768px < width) {
-  .header {
-    /* Чтобы высота хедера плавно увеличивалась по мере увеличения ширины экрана.
-    Динамическую высоту считал на сайте по логике с размером шрифта
-    https://clamp.font-size.app/?config=eyJyb290IjoiMTYiLCJtaW5XaWR0aCI6IjM3NXB4IiwibWF4V2lkdGgiOiI3NjhweCIsIm1pbkZvbnRTaXplIjoiNjY4cHgiLCJtYXhGb250U2l6ZSI6IjEwMjRweCJ9 */
-    height: clamp(48rem, 112rem + -100vw, 64rem);
-  }
-
   .header__title {
     text-shadow: 4px 4px 0px var(--title-accent-color);
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
@@ -288,7 +274,7 @@
 
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> MAIN MEDIA >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 
-@media (375px < width) {
+@media (768px <= width) {
   .content {
     padding: 0 20px;
     gap: 80px;
@@ -316,7 +302,7 @@
   }
 }
 
-@media (768px < width) {
+@media (1024px <= width) {
   .section-type-stretchy {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -346,7 +332,7 @@
 
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> GALLERY MEDIA >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 
-@media (375px < width) {
+@media (768px <= width) {
   .gallery {
     gap: 20px;
   }
@@ -382,7 +368,7 @@
 }
 
 .footer {
-  min-height: 668px;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -398,58 +384,16 @@
   font-weight: bold;
 }
 
-.footer::after {
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-block-start: 1px solid var(--accent-color);
-  border-inline-end: 1px solid var(--accent-color);
-  position: absolute;
-  inset-inline-end: 10px;
-  inset-block-start: 10px;
-}
-
-.footer::before {
-  content: "";
-  width: 25px;
-  height: 25px;
-  border-inline-start: 1px solid var(--accent-color);
-  border-block-end: 1px solid var(--accent-color);
-  position: absolute;
-  inset-block-end: 10px;
-  inset-inline-start: 10px;
-}
-
 /* >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> FOOTER MEDIA >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> */
 
-@media (375px < width) {
+@media (375px <= width) {
   .footer {
     padding: var(--medium-ten-to-twenty-pixels-shift);
     margin-block-start: 60px;
   }
-
-  .footer::after {
-    inset-inline-end: var(--medium-ten-to-twenty-pixels-shift);
-    inset-block-start: var(--medium-ten-to-twenty-pixels-shift);
-  }
-
-  .footer::before {
-    inset-block-end: var(--medium-ten-to-twenty-pixels-shift);
-    inset-inline-start: var(--medium-ten-to-twenty-pixels-shift);
-  }
 }
 
-@media (375px < width <= 768px) {
-  .footer {
-    height: clamp(668px, 20.5191rem + 90.5852vw, 1024px);
-  }
-}
-
-@media (768px < width) {
-  .footer {
-    height: clamp(48rem, 112rem + -100vw, 64rem);
-  }
-
+@media (768px <= width) {
   .footer__text {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
     text-shadow: 4px 4px 0px var(--title-accent-color);
