--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,13 +4,24 @@
 */
 
 :root {
+  --main-font: "IBM Plex mono", monospace;
+  --font-size-m: 18px;
+
   --bg-color: #000028;
   --accent-color: #ff0070;
   --text-color: #000028;
-  --title-color: #db00ff;
+  --bg-image: url("../images/cover-image-dark.png");
 
-  --main-font: "IBM Plex mono", sans-serif;
-  --font-size-m: 18px;
+  --corners-color: var(--accent-color);
+
+  --title-color: #db00ff;
+  --title-accent-color: var(--accent-color);
+
+  --header-display-rec: block;
+  --header-button-color: var(--accent-color);
+
+  --content__title-color: var(--accent-color);
+  --content__text-color: #f1b2ce;
 
   /* @media переменные 365 < width */
   /* Плавно меняем отступ с 10px на 20px */
